# ChaosCrypt

./: .replit  backend  full_code.py  index.html  main.py  pyproject.toml
static/: styles.css
templates/: credits.html  decrypt.html  encrypt.html  file_encrypt.html  home.html  how_it_works.html
